v2.4/_sources/example_inference_int8_matmul.cpp.rst.txt
.. index:: pair: example; inference_int8_matmul.cpp
.. _doxid-inference_int8_matmul_8cpp-example:

inference_int8_matmul.cpp
=========================

Annotated version: :ref:`MatMul Tutorial: INT8 Inference <doxid-inference_int8_matmul_cpp>`

Annotated version: :ref:`MatMul Tutorial: INT8 Inference <doxid-inference_int8_matmul_cpp>`



.. ref-code-block:: cpp

	/*******************************************************************************
	* Copyright 2019-2020 Intel Corporation
	*
	* Licensed under the Apache License, Version 2.0 (the "License");
	* you may not use this file except in compliance with the License.
	* You may obtain a copy of the License at
	*
	*     http://www.apache.org/licenses/LICENSE-2.0
	*
	* Unless required by applicable law or agreed to in writing, software
	* distributed under the License is distributed on an "AS IS" BASIS,
	* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	* See the License for the specific language governing permissions and
	* limitations under the License.
	*******************************************************************************/
	
	
	#include <cassert>
	#include <cctype>
	#include <cmath>
	#include <cstdio>
	#include <iostream>
	#include <random>
	#include <stdexcept>
	#include <vector>
	
	#include "oneapi/dnnl/dnnl.hpp"
	
	#include "example_utils.hpp"
	
	using namespace :ref:`dnnl <doxid-namespacednnl>`;
	
	namespace {
	
	void init_vector(std::vector<float> &v) {
	    std::mt19937 gen;
	    std::uniform_real_distribution<float> u(0, 1);
	    for (auto &e : v)
	        e = u(gen);
	}
	
	void init_vector(std::vector<uint8_t> &v) {
	    std::mt19937 gen;
	    std::uniform_int_distribution<unsigned int> u(0, 255);
	    for (auto &e : v)
	        e = static_cast<uint8_t>(u(gen));
	}
	
	} // namespace
	
	int number_of_runs = 1;
	
	// Create a MatMul primitive descriptor for the following op:
	// C_u8 = ReLU(scale[:] * (A_u8 - zp_A) * B_s8) + zp_C
	//
	// Here:
	// - Matrices A and C are known to be non-transposed but their M dimension is
	//   not known. They can be activation matrices in an MLP topology and the M
	//   dimension can be the mini-batch dimension.
	// - zp_A and zp_C are zero points for matrices A and C which are stored as
	//   uint8_t. These are run-time parameters that are not known at the primitive
	//   creation time.
	// - The B matrix is stored as int8_t, its zero point is 0, and all its
	//   dimensions are known. This matrix can be a matrix of weights in an MLP
	//   topology.
	// - The scaling values are not known at the primitive creation time.
	:ref:`matmul::primitive_desc <doxid-structdnnl_1_1matmul_1_1primitive__desc>` matmul_pd_create(
	        int64_t K, int64_t N, const :ref:`engine <doxid-structdnnl_1_1engine>` &eng) {
	    const int64_t M = :ref:`DNNL_RUNTIME_DIM_VAL <doxid-group__dnnl__api__memory_1gaa596c5a6102df77a550bad98f0d5cc12>`;
	
	    :ref:`memory::desc <doxid-structdnnl_1_1memory_1_1desc>` a_md({M, K}, :ref:`memory::data_type::u8 <doxid-structdnnl_1_1memory_1a8e83474ec3a50e08e37af76c8c075dcea077393852be20e37026d6281827662f2>`, {K, 1}); // M x K layout
	    :ref:`memory::desc <doxid-structdnnl_1_1memory_1_1desc>` b_md({K, N}, :ref:`memory::data_type::s8 <doxid-structdnnl_1_1memory_1a8e83474ec3a50e08e37af76c8c075dcea3e8d88fdd85d7153525e0647cdd97686>`, :ref:`memory::format_tag::any <doxid-structdnnl_1_1memory_1a8e71077ed6a5f7fb7b3e6e1a5a2ecf3fa100b8cad7cf2a56f6df78f171f97a1ec>`);
	    :ref:`memory::desc <doxid-structdnnl_1_1memory_1_1desc>` c_md({M, N}, :ref:`memory::data_type::u8 <doxid-structdnnl_1_1memory_1a8e83474ec3a50e08e37af76c8c075dcea077393852be20e37026d6281827662f2>`, {N, 1}); // M x N layout
	
	    // Create attributes and indicate that the alpha and zero points are
	    // runtime parameters
	    primitive_attr attr;
	    attr.set_output_scales(/* mask */ (1 << 1), {:ref:`DNNL_RUNTIME_F32_VAL <doxid-group__dnnl__api__memory_1gab16365c11b4dc88fbb453edb51f1979f>`});
	    attr.set_zero_points(:ref:`DNNL_ARG_SRC <doxid-group__dnnl__api__primitives__common_1gac37ad67b48edeb9e742af0e50b70fe09>`, /* mask */ 0, {:ref:`DNNL_RUNTIME_S32_VAL <doxid-group__dnnl__api__memory_1ga30139d5110e9e895ccd93fe503ca4c35>`});
	    attr.set_zero_points(:ref:`DNNL_ARG_DST <doxid-group__dnnl__api__primitives__common_1ga3ca217e4a06d42a0ede3c018383c388f>`, /* mask */ 0, {:ref:`DNNL_RUNTIME_S32_VAL <doxid-group__dnnl__api__memory_1ga30139d5110e9e895ccd93fe503ca4c35>`});
	    :ref:`post_ops <doxid-structdnnl_1_1post__ops>` po;
	    po.:ref:`append_eltwise <doxid-structdnnl_1_1post__ops_1a28460923ad579c780e4027a6256fe207>`(1.f, :ref:`algorithm::eltwise_relu <doxid-group__dnnl__api__attributes_1gga00377dd4982333e42e8ae1d09a309640aba09bebb742494255b90b43871c01c69>`, 0.f, 0.f);
	    attr.set_post_ops(po);
	
	    // Create a MatMul primitive descriptor
	    :ref:`matmul::desc <doxid-structdnnl_1_1matmul_1_1desc>` :ref:`matmul_d <doxid-group__dnnl__api__primitives__common_1gga94efdd650364f4d9776cfb9b711cbdc1a4a7fa4b07a2f5ef2534d7159225f480d>`(a_md, b_md, c_md);
	    return :ref:`matmul::primitive_desc <doxid-structdnnl_1_1matmul_1_1primitive__desc>`(matmul_d, attr, eng);
	}
	
	void prepare_input(:ref:`memory <doxid-structdnnl_1_1memory>` &A_u8_mem, :ref:`memory <doxid-structdnnl_1_1memory>` &scale_f32_mem, :ref:`memory <doxid-structdnnl_1_1memory>` &zp_A_mem,
	        :ref:`memory <doxid-structdnnl_1_1memory>` &zp_C_mem) {
	    int64_t M = A_u8_mem.:ref:`get_desc <doxid-structdnnl_1_1memory_1ad8a1ad28ed7acf9c34c69e4b882c6e92>`().:ref:`dims <doxid-structdnnl_1_1memory_1_1desc_1aaf95c174b7d7f5ea59646886719d0a2b>`()[0];
	    int64_t N = scale_f32_mem.:ref:`get_desc <doxid-structdnnl_1_1memory_1ad8a1ad28ed7acf9c34c69e4b882c6e92>`().:ref:`dims <doxid-structdnnl_1_1memory_1_1desc_1aaf95c174b7d7f5ea59646886719d0a2b>`()[0];
	    int64_t K = A_u8_mem.:ref:`get_desc <doxid-structdnnl_1_1memory_1ad8a1ad28ed7acf9c34c69e4b882c6e92>`().:ref:`dims <doxid-structdnnl_1_1memory_1_1desc_1aaf95c174b7d7f5ea59646886719d0a2b>`()[1];
	
	    std::vector<uint8_t> A_u8(M * K);
	    init_vector(A_u8);
	
	    std::vector<float> scales_f32(N);
	    init_vector(scales_f32);
	
	    int32_t zp_A = 128, zp_C = 40;
	
	    write_to_dnnl_memory(A_u8.data(), A_u8_mem);
	    write_to_dnnl_memory(&zp_A, zp_A_mem);
	    write_to_dnnl_memory(&zp_C, zp_C_mem);
	    write_to_dnnl_memory(scales_f32.data(), scale_f32_mem);
	}
	
	void sanity_check(:ref:`memory <doxid-structdnnl_1_1memory>` &C_u8_mem, :ref:`memory <doxid-structdnnl_1_1memory>` &zp_C_mem) {
	    int64_t M = C_u8_mem.:ref:`get_desc <doxid-structdnnl_1_1memory_1ad8a1ad28ed7acf9c34c69e4b882c6e92>`().:ref:`dims <doxid-structdnnl_1_1memory_1_1desc_1aaf95c174b7d7f5ea59646886719d0a2b>`()[0];
	    int64_t N = C_u8_mem.:ref:`get_desc <doxid-structdnnl_1_1memory_1ad8a1ad28ed7acf9c34c69e4b882c6e92>`().:ref:`dims <doxid-structdnnl_1_1memory_1_1desc_1aaf95c174b7d7f5ea59646886719d0a2b>`()[1];
	    int32_t zp_C = 0;
	    std::vector<uint8_t> C_u8(M * N);
	
	    read_from_dnnl_memory(C_u8.data(), C_u8_mem);
	    read_from_dnnl_memory(&zp_C, zp_C_mem);
	
	    // simple check: C_u8 >= zp_C
	    for (int64_t i = 0; i < M * N; ++i)
	        if (C_u8[i] < zp_C)
	            throw std::logic_error(
	                    "Smoke check failed."
	                    "\n\tQuantized value is smaller than the zero point,"
	                    "\n\twhich should not happen since ReLU was applied.");
	}
	
	void infer(const :ref:`matmul <doxid-structdnnl_1_1matmul>` &matmul_p, int64_t M, int64_t N, int64_t K,
	        const :ref:`memory <doxid-structdnnl_1_1memory>` &B_s8_mem, const :ref:`engine <doxid-structdnnl_1_1engine>` &eng) {
	    // inputs of the current layer / operation
	    :ref:`memory <doxid-structdnnl_1_1memory>` A_u8_mem({{M, K}, :ref:`memory::data_type::u8 <doxid-structdnnl_1_1memory_1a8e83474ec3a50e08e37af76c8c075dcea077393852be20e37026d6281827662f2>`, {K, 1}}, eng);
	    :ref:`memory <doxid-structdnnl_1_1memory>` zp_A_mem({{1}, :ref:`memory::data_type::s32 <doxid-structdnnl_1_1memory_1a8e83474ec3a50e08e37af76c8c075dceaa860868d23f3a68323a2e3f6563d7f31>`, {1}}, eng);
	    :ref:`memory <doxid-structdnnl_1_1memory>` zp_C_mem({{1}, :ref:`memory::data_type::s32 <doxid-structdnnl_1_1memory_1a8e83474ec3a50e08e37af76c8c075dceaa860868d23f3a68323a2e3f6563d7f31>`, {1}}, eng);
	    :ref:`memory <doxid-structdnnl_1_1memory>` scale_f32_mem({{N}, :ref:`memory::data_type::f32 <doxid-structdnnl_1_1memory_1a8e83474ec3a50e08e37af76c8c075dcea512dc597be7ae761876315165dc8bd2e>`, {1}}, eng);
	
	    // the function below fills dnnl::memory with some values
	    // these memories, typically, come from the previous layers / operations
	    // with meaningful data inside
	    prepare_input(A_u8_mem, scale_f32_mem, zp_A_mem, zp_C_mem);
	
	    // output - no initialization required
	    :ref:`memory <doxid-structdnnl_1_1memory>` C_u8_mem({{M, N}, :ref:`memory::data_type::u8 <doxid-structdnnl_1_1memory_1a8e83474ec3a50e08e37af76c8c075dcea077393852be20e37026d6281827662f2>`, {N, 1}}, eng);
	
	    :ref:`stream <doxid-structdnnl_1_1stream>` s(eng);
	    for (int run = 0; run < number_of_runs; ++run)
	        matmul_p.:ref:`execute <doxid-structdnnl_1_1primitive_1a2c112f2449a18a87310dee2ecd8c64eb>`(s,
	                {{DNNL_ARG_SRC, A_u8_mem}, {DNNL_ARG_WEIGHTS, B_s8_mem},
	                        {DNNL_ARG_DST, C_u8_mem},
	                        {DNNL_ARG_ATTR_OUTPUT_SCALES, scale_f32_mem},
	                        {DNNL_ARG_ATTR_ZERO_POINTS | DNNL_ARG_SRC, zp_A_mem},
	                        {DNNL_ARG_ATTR_ZERO_POINTS | DNNL_ARG_DST, zp_C_mem}});
	    s.wait();
	
	    // a sanity check for the correctness of the output
	    sanity_check(C_u8_mem, zp_C_mem);
	}
	
	void inference_int8_matmul(:ref:`engine::kind <doxid-structdnnl_1_1engine_1a2635da16314dcbdb9bd9ea431316bb1a>` engine_kind) {
	    :ref:`engine <doxid-structdnnl_1_1engine>` eng(engine_kind, 0);
	
	    const int64_t K = 96;
	    const int64_t N = 1000;
	    auto matmul_pd = matmul_pd_create(K, N, eng);
	
	    // Original weights stored as float in a known format
	    std::vector<float> B_f32(K * N);
	    init_vector(B_f32);
	
	    // Pre-packed weights stored as int8_t
	    :ref:`memory <doxid-structdnnl_1_1memory>` B_s8_mem(matmul_pd.weights_desc(), eng);
	    {
	        :ref:`stream <doxid-structdnnl_1_1stream>` s(eng);
	        :ref:`memory <doxid-structdnnl_1_1memory>` B_f32_mem(
	                {{K, N}, memory::data_type::f32, memory::format_tag::ab}, eng);
	        write_to_dnnl_memory(B_f32.data(), B_f32_mem);
	        :ref:`reorder <doxid-structdnnl_1_1reorder>`(B_f32_mem, B_s8_mem).:ref:`execute <doxid-structdnnl_1_1reorder_1ab9d5265274a13d4afa1fe33d784a1027>`(s, B_f32_mem, B_s8_mem);
	        s.wait();
	    }
	
	    :ref:`matmul <doxid-structdnnl_1_1matmul>` matmul_p(matmul_pd);
	
	    for (int64_t M : {1, 100})
	        infer(matmul_p, M, N, K, B_s8_mem, eng);
	}
	
	int main(int argc, char **argv) {
	    :ref:`engine::kind <doxid-structdnnl_1_1engine_1a2635da16314dcbdb9bd9ea431316bb1a>` engine_kind = parse_engine_kind(argc, argv);
	    return handle_example_errors(inference_int8_matmul, engine_kind);
	}
